--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   firebase_core: any
   firebase_database: any
   get: any
+  firebase_storage: ^10.3.8
+  image_picker: ^0.8.5+3
+  cloud_firestore: ^3.4.8
+  flutter_svg: ^1.1.5
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
