--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^0.8.5+3
   cloud_firestore: ^3.4.8
   flutter_svg: ^1.1.5
+  firebase_auth: ^3.10.0
 
 dev_dependencies:
   flutter_test:
