--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cached_network_image: any
+  carousel_slider: ^4.1.1
   cloud_firestore: ^3.4.8
   convex_bottom_bar: ^3.1.0+1
   cupertino_icons: any
@@ -40,19 +41,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^1.1.5
-  shared_preferences: ^2.0.15
   get: any
   google_fonts: any
   image_picker: ^0.8.5+3
   pdf: ^3.8.3
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
@@ -70,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/carousel_slider/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
