--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   get: any
   google_fonts: any
   image_picker: ^0.8.5+3
+  intl: ^0.17.0
   pdf: ^3.8.3
   shared_preferences: ^2.0.15
 
