--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^3.10.0
   firebase_core: any
   firebase_database: any
+  firebase_messaging: ^13.1.0
   firebase_storage: ^10.3.8
   flutter:
     sdk: flutter
