--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
     sdk: flutter
   flutter_local_notifications: ^12.0.3
   flutter_svg: ^1.1.5
+  fluttertoast: ^8.1.1
   get: any
   google_fonts: any
   image_picker: ^0.8.5+3
